PPL-Sources/PPL-FE/src/test/resources/CoCos/Valid/ShadowVariableExistsCoCo.par
ShadowVariableExistsCoCo {
seq main() : Void {
    var Int test = 2
}
}