PPL-Sources/PPL-FE/src/test/resources/CoCos/Invalid/ShadowVariableExistsCoCo.par
ShadowVariableExistsCoCo {
seq main() : Void {
    var Int test = 2
    var Int test = 3
}
}